support_tools/swigwin-3.0.12/Examples/test-suite/errors/pp_macro_unterminated.i
%module xxx

#define foo(a,x)      a+x

foo(3,


